[package]
name = "pshovr"
version = "0.3.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2018"
repository = "https://github.com/richo/pshovr"
readme = "README.md"
license = "MIT"
description = "An opinionated wrapper for the v1 pushover api"

[dependencies]
failure = "0.1.8"
reqwest = { version = "0.11.26", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
redacted_debug = "0.2.0"

[dev-dependencies]
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros"] }

[features]
async = []
